--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <!--promo video -->
     <video controls>
       <source src="videos/real-estate.mp4" type="video/mp4">
-      <source src="videos/real-estate.ogv" type="video/ogg"> 
+      <source src="videos/real-estate.ogv" type="video/ogg">
+        Your browser does not support HTML5 Video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser.</a>
     </video>
   </body>
 </html>
